--- a/src/assest/styles/components/stay-app/_filter-bar.scss
+++ b/src/assest/styles/components/stay-app/_filter-bar.scss
@@ -31,6 +31,11 @@
             gap: 10px;
         }
 
+        &.active{
+            background-color: violet;
+            color: violet;
+        }
+
        
 
        &:hover{
