--- a/src/assest/styles/pages/_home-page.scss
+++ b/src/assest/styles/pages/_home-page.scss
@@ -9,7 +9,6 @@
             height: 100%;
             object-fit: cover;
         }
-      
     }
 
     p {
@@ -23,25 +22,28 @@
         flex-direction: column;
         padding-block-start: 50px;
         flex-direction: column;
-        margin-block-end: 80px;
-     
+        margin-block-end: 50px;
+
         .card-container {
             display: grid;
             grid-auto-flow: dense;
             grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
             gap: 20px;
 
-            img {
-                height: 100%;
-                border-radius: 15px;
-                object-fit: cover;
-            }
+            .img-container {
+                aspect-ratio: 1;
+                img {
+                    height: 100%;
+                    border-radius: 15px;
+                    object-fit: cover;
+                }
 
-            p {
-                padding-block-start: 5px;
-                padding-inline-start: 3px;
-                font-size: 1rem;
-                font-family: f-book;
+                p {
+                    padding-block-start: 5px;
+                    padding-inline-start: 3px;
+                    font-size: 1rem;
+                    font-family: f-book;
+                }
             }
         }
         > div {
@@ -61,7 +63,7 @@
         }
         .img-container {
             position: relative;
-           
+
             .img-text {
                 position: absolute;
                 font-family: f-book;
@@ -72,6 +74,7 @@
                 text-shadow: 0 0 2px black;
                 letter-spacing: -0.02em;
                 font-size: rem(32px);
+                pointer-events: none;
             }
 
             img {
