--- a/src/assest/styles/components/date-range/_date-range.scss
+++ b/src/assest/styles/components/date-range/_date-range.scss
@@ -5,6 +5,12 @@
     box-shadow: 0px 6px 20px rgb(0 0 0 / 20%);
     z-index: 5;
 
+    &.reserve-modal{
+        position: absolute;
+        z-index: -3;
+        right:0;
+    }
+
     .rdrDateDisplayWrapper {
         display: none;
     }
