--- a/src/assest/styles/components/date-range/_date-range.scss
+++ b/src/assest/styles/components/date-range/_date-range.scss
@@ -5,6 +5,7 @@
     box-shadow: 0px 6px 20px rgb(0 0 0 / 20%);
     z-index: 5;
     width: 100%;
+    top: 115%;
 
     .rdrDateDisplayWrapper {
         display: none;
