--- a/src/assest/styles/components/guests-modal/guests-modal.scss
+++ b/src/assest/styles/components/guests-modal/guests-modal.scss
@@ -10,6 +10,8 @@
     font-size: rem(16px);
     box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2%);
     z-index: 100;
+    right: 0;
+    top: 115%;
 
     > :not(:last-child) {
         width: 100%;
