--- a/src/assest/styles/pages/_home-page.scss
+++ b/src/assest/styles/pages/_home-page.scss
@@ -67,8 +67,8 @@
                 position: absolute;
                 font-family: f-book;
                 color: $clr5;
-                padding: 15px 55px;
-                height: 100%;
+                padding: 24px;
+                bottom: 0;
                 width: 56%;
                 text-shadow: 0 0 2px black;
                 letter-spacing: -0.02em;
