--- a/src/assest/styles/components/stay-app/_filter-bar.scss
+++ b/src/assest/styles/components/stay-app/_filter-bar.scss
@@ -1,6 +1,7 @@
 .filter-bar {
-    margin-block-end: 17px;
-    padding-block-start: 12px;
+    margin-block-end: 25px;
+    // padding-block-start: 12px;
+    position: relative;
     // position: fixed;
     // height: 40px;
 
