--- a/src/assest/styles/components/stay-app/_type-of-place.scss
+++ b/src/assest/styles/components/stay-app/_type-of-place.scss
@@ -2,7 +2,7 @@
     position: absolute;
     background-color: $clr5;
     // top: 50px;
-    top: 253px;
+    top: 125%;
     z-index: 100;
     margin-left: 97px;
     flex-direction: column;
