--- a/src/assest/styles/pages/app-login/app-login.scss
+++ b/src/assest/styles/pages/app-login/app-login.scss
@@ -47,7 +47,6 @@
                 .login-form-actions {
                     display: flex;
                     flex-direction: column;
-                    align-items: center;
 
                     small {
                         font-size: rem(12px);
@@ -56,8 +55,26 @@
 
                     .signin-btn-container {
                         display: flex;
+                        flex-direction: column;
                         gap: 15px;
-                        padding: 20px 0px;
+                        padding: 50px 0px 20px;
+
+                        button:first-child{
+                            width: 100%;
+                            height: 48px;
+                            background-color: $clr1;
+                            border: none;
+                            border-radius: 8px ;
+                            color: $clr5;
+                            cursor: pointer;
+                        }
+                        button:last-child{
+                            width: 100%;
+                            height: 48px;
+                            background-color:transparent;
+                            border: none ;
+                            cursor: pointer;
+                        }
                     }
                 }
 
