--- a/src/assest/styles/pages/orders-page/orders-page.scss
+++ b/src/assest/styles/pages/orders-page/orders-page.scss
@@ -1,7 +1,6 @@
 .user-details {
     margin-top: 20px;
     align-items: center;
-    padding: 20px 30px;
     gap: 20px;
     font-size: rem(16px);
 
@@ -32,7 +31,7 @@
     }
     .order-info-container {
         display: flex;
-        padding: 20px 30px;
+        padding-top: 20px;
         gap: 20px;
         .order-img-container {
             display: flex;
