--- a/src/assest/styles/components/guests-modal/guests-modal.scss
+++ b/src/assest/styles/components/guests-modal/guests-modal.scss
@@ -5,10 +5,9 @@
     width: 380px;
     padding: 16px 32px;
     border-radius: 30px;
-    box-shadow: 0 0 1px 0 $clr8;
     background-color: $clr5;
     font-size: rem(16px);
-    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2%);
+    box-shadow: 0px 6px 20px rgb(0 0 0 / 20%);
     z-index: 100;
     right: 0;
     top: 115%;
