--- a/src/assest/styles/pages/_stay-details.scss
+++ b/src/assest/styles/pages/_stay-details.scss
@@ -214,7 +214,10 @@
         position: sticky;
         text-align: center;
         display: flex;
+        z-index: 5;
         flex-direction: column;
+
+        
       }
     }
   }
