--- a/src/assest/styles/components/stay-map/_stay-map.scss
+++ b/src/assest/styles/components/stay-map/_stay-map.scss
@@ -1,5 +1,10 @@
 .map-section {
   h2 {
     margin-block-end: 30px;
+    font-family: f-medium !important;
+  }
+  button {
+    right: -5px !important;
+    top: -5px !important;
   }
 }
