--- a/src/assest/styles/pages/_stay-details.scss
+++ b/src/assest/styles/pages/_stay-details.scss
@@ -9,7 +9,7 @@
       justify-content: space-between;
       img {
         width: 14px;
-        height: 14px;
+        height: 20px;
         filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg)
           brightness(100%) contrast(103%);
         margin-right: 5px;
@@ -142,6 +142,7 @@
           margin-right: 15px;
         }
         ul li {
+          align-items: center;
           list-style-position: inside;
           page-break-inside: avoid;
           break-inside: avoid;
@@ -151,8 +152,8 @@
       }
 
       .summary {
-        line-height: 1.5;
-        margin-bottom: 50px;
+        line-height: 2;
+        margin-bottom: 35px;
       }
 
       .stay-perks {
@@ -216,9 +217,11 @@
         display: flex;
         z-index: 5;
         flex-direction: column;
-
-        
       }
     }
   }
+}
+
+.details-map {
+  margin-block-end: 5px;
 }
