--- a/src/assest/styles/setup/_variables.scss
+++ b/src/assest/styles/setup/_variables.scss
@@ -1,18 +1,16 @@
 // Colors
-$clr1: #FF385C;
+$clr1: #ff385c;
 $clr2: #222222;
 $clr3: #717171;
 $clr4: #303030;
-$clr5: #FFFFFF;
-$clr6: #F7F7F7;
-$clr7: #DDDDDD; 
+$clr5: #ffffff;
+$clr6: #f7f7f7;
+$clr7: #dddddd;
 $clr8: #7e7e7e;
-$clr9:#ebebeb;
-$clr10:#000000;
-$clr11:#ebebeb;
-$clr12:#b4b4b4;
-
-
+$clr9: #ebebeb;
+$clr10: #000000;
+$clr11: #ebebeb;
+$clr12: #b4b4b4;
 
 // Breakpoints
 $break-mobile: 350px;
@@ -21,7 +19,3 @@ $break-tablet: 620px;
 $break-normal: 820px;
 $break-large: 1100px;
 $break-wide: 1300px;
-
-
-
-
