--- a/src/assest/styles/pages/_home-page.scss
+++ b/src/assest/styles/pages/_home-page.scss
@@ -84,4 +84,10 @@
             margin-block-end: 200px;
         }
     }
+    .become-host-link{
+        img{
+            object-fit: cover;
+            border-radius: 12px;
+        }
+    }
 }
