--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -25,6 +25,7 @@
 @import "components/backoffice/stay-edit.scss";
 @import "components/backoffice/host-orders.scss";
 @import "components/backoffice/host-stays.scss";
+@import "components/loader/loader.scss";
 
 // Pages
 
