--- a/src/assest/styles/components/stay-details/stay-reserve.scss
+++ b/src/assest/styles/components/stay-details/stay-reserve.scss
@@ -67,6 +67,9 @@
   &:last-of-type {
     border-left: 1px solid #00000050;
   }
+  :hover {
+    cursor: pointer;
+  }
 
   input {
     border: none;
@@ -82,6 +85,9 @@
   gap: 5px;
   border-top: 1px solid #00000050;
   padding: 7px 12px;
+  :hover {
+    cursor: pointer;
+  }
   input {
     border: none;
     padding: 0 0;
