--- a/src/assest/styles/components/app-header/_app-header.scss
+++ b/src/assest/styles/components/app-header/_app-header.scss
@@ -168,6 +168,7 @@ header {
             align-items: center;
             justify-content: center;
             border: 1px solid $clr7;
+            cursor: pointer;
 
             .menu-icon {
                 margin-right: 10px;
