--- a/src/assest/styles/pages/_home-page.scss
+++ b/src/assest/styles/pages/_home-page.scss
@@ -1,5 +1,21 @@
 // HOME PAGE PHOTO
 .home-page {
+
+
+    .img-text {
+        position: absolute;
+        font-family: f-book;
+        color: $clr5;
+        padding: 50px;
+        bottom: 0;
+        width: 56%;
+        z-index: 1;
+        // text-shadow: 0 0 2px black;
+        letter-spacing: -0.02em;
+        font-size: rem(32px);
+        pointer-events: none;
+    }
+
     .hero-container {
         position: relative;
         // overflow: hidden;
@@ -31,6 +47,7 @@
 
             .img-container {
                 aspect-ratio: 1;
+                position: relative;
                 img {
                     height: 100%;
                     border-radius: 15px;
@@ -40,6 +57,7 @@
                 p {
                     padding-block-start: 5px;
                     padding-inline-start: 3px;
+                    margin: 0;
                     font-size: 1rem;
                     font-family: f-book;
                 }
@@ -55,6 +73,7 @@
         grid-auto-flow: dense;
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
         gap: 20px;
+        margin-block-end: 50px;
 
         > div {
             // height: 50vh;
@@ -62,32 +81,43 @@
         }
         .img-container {
             position: relative;
+            overflow: hidden;
+            border-radius: 12px;
 
-            .img-text {
+            &:after {
                 position: absolute;
-                font-family: f-book;
-                color: $clr5;
-                padding: 24px;
-                bottom: 0;
-                width: 56%;
-                text-shadow: 0 0 2px black;
-                letter-spacing: -0.02em;
-                font-size: rem(32px);
-                pointer-events: none;
+                top: 0;
+                right: 0;
+                content: "";
+                height: 100%;
+                width: 100%;
+                background-image: linear-gradient(0deg, #0008, 30%, #0000);
+
+
             }
 
             img {
                 height: 100%;
+                position: absolute;
                 object-fit: cover;
                 border-radius: 12px;
             }
-            margin-block-end: 200px;
+            // margin-block-end: 200px;
         }
     }
-    .become-host-link{
-        img{
+    .become-host-link {
+        position: relative;
+        margin-block-end: 30px;
+
+        .img-text {
+          top: 0;
+          padding: 120px;
+          font-size: rem(40px);
+        }
+        img {
             object-fit: cover;
             border-radius: 12px;
+            height: 70vh;
         }
     }
 }
