--- a/src/assest/styles/components/stay-details/stay-reserve.scss
+++ b/src/assest/styles/components/stay-details/stay-reserve.scss
@@ -33,7 +33,8 @@
   img {
     width: 12px;
     height: 12px;
-    filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg) brightness(100%) contrast(103%);
+    filter: invert(56%) sepia(80%) saturate(6258%) hue-rotate(328deg)
+      brightness(100%) contrast(103%);
   }
   .dot {
     color: $clr2;
@@ -123,7 +124,8 @@ span.reviews {
       --positionX: #{$i};
     }
 
-    .cell:nth-child(n + #{10 * $i + 1}):nth-child(-n + #{10 * ($i + 1)}):hover ~ .content {
+    .cell:nth-child(n + #{10 * $i + 1}):nth-child(-n + #{10 * ($i + 1)}):hover
+      ~ .content {
       --positionY: #{$i};
     }
   }
@@ -162,7 +164,8 @@ span.reviews {
   border-radius: 8px;
 
   background-image: radial-gradient(
-    circle at calc((0 + var(--positionX, 0)) * 10%) calc((0 + var(--positionY, 0)) * 5%),
+    circle at calc((0 + var(--positionX, 0)) * 10%)
+      calc((0 + var(--positionY, 0)) * 5%),
     rgb(241, 37, 75) 0%,
     rgb(230, 30, 77) 27.5%,
     rgb(227, 28, 95) 40%,
@@ -194,7 +197,8 @@ p.footer {
     display: flex;
     height: 13px;
     width: 14px;
-    filter: invert(49%) sepia(0%) saturate(1334%) hue-rotate(167deg) brightness(88%) contrast(89%);
+    filter: invert(49%) sepia(0%) saturate(1334%) hue-rotate(167deg)
+      brightness(88%) contrast(89%);
     margin-inline-end: 7px;
   }
   a {
@@ -214,14 +218,14 @@ p.footer {
     padding-bottom: 17px;
     font-size: rem(16px);
     line-height: 20px;
-    
+
     .reserve-charge-txt {
       color: $clr8;
       font-family: f-light;
       text-decoration: underline $clr8;
     }
-    
-    .reserve-charge-sum{
+
+    .reserve-charge-sum {
       font-family: f-light;
       color: $clr8;
     }
