--- a/src/assest/styles/components/guests-modal/guests-modal.scss
+++ b/src/assest/styles/components/guests-modal/guests-modal.scss
@@ -1,77 +1,80 @@
 .guests-modal {
-    position: absolute;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 380px;
+  padding: 16px 32px;
+  border-radius: 30px;
+  background-color: $clr5;
+  font-size: rem(16px);
+  box-shadow: 0px 6px 20px rgb(0 0 0 / 20%);
+  z-index: 100;
+  right: 0;
+  top: 115%;
+
+  > :not(:last-child) {
+    width: 100%;
+    border-bottom: 1px solid $clr11;
+  }
+  .modal-row {
     display: flex;
-    flex-direction: column;
-    width: 380px;
-    padding: 16px 32px;
-    border-radius: 30px;
-    background-color: $clr5;
-    font-size: rem(16px);
-    box-shadow: 0px 6px 20px rgb(0 0 0 / 20%);
-    z-index: 100;
-    right: 0;
-    top: 115%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
 
-    > :not(:last-child) {
-        width: 100%;
-        border-bottom: 1px solid $clr11;
+    > :last-child {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      text-align: center;
     }
-    .modal-row {
-        display: flex;
-        justify-content: space-between;
+
+    .modal-text-container {
+      display: flex;
+      flex-direction: column;
+
+      p {
+        margin: 0;
+        text-align: left;
+      }
+
+      p:first-child {
+        font-size: rem(16px);
+        font-family: f-medium;
+        line-height: 20px;
+        color: $clr2;
+      }
+
+      p:last-child {
+        font-size: rem(14px);
+        font-family: f-light;
+        line-height: 18px;
+        color: $clr3;
+      }
+    }
+
+    .modal-btns-container {
+      display: flex;
+      gap: 15px;
+
+      span {
+        color: $clr2;
+      }
+
+      .modal-btn {
+        height: 32px;
+        width: 32px;
+        color: $clr8;
+        border: 1px solid $clr3;
         align-items: center;
-        padding: 16px;
-
-        > :last-child {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            text-align: center;
+        justify-content: center;
+        background-color: transparent;
+        border-radius: 50%;
+        font-size: rem(18px);
+        &:last-child {
+          line-height: 1.6em;
         }
-
-        .modal-text-container {
-            display: flex;
-            flex-direction: column;
-
-            p {
-                margin: 0;
-                text-align: left;
-            }
-
-            p:first-child {
-                font-size: rem(16px);
-                font-family: f-medium;
-                line-height: 20px;
-                color: $clr2;
-            }
-
-            p:last-child {
-                font-size: rem(14px);
-                font-family: f-light;
-                line-height: 18px;
-                color: $clr3;
-            }
-        }
-
-        .modal-btns-container {
-            display: flex;
-            gap: 15px;
-
-            span {
-                color: $clr2;
-            }
-
-            .modal-btn {
-                height: 32px;
-                width: 32px;
-                color: $clr8;
-                border: 1px solid $clr3;
-                align-items: center;
-                justify-content: center;
-                background-color: transparent;
-                border-radius: 50%;
-                font-size: rem(18px);
-            }
-        }
+      }
     }
+  }
 }
