--- a/src/assest/styles/pages/_stay-details.scss
+++ b/src/assest/styles/pages/_stay-details.scss
@@ -220,7 +220,7 @@
         .guests-modal {
           right: 50%;
           transform: translateX(50%);
-          top: 63%;
+          top: 199px;
         }
       }
     }
