--- a/src/assest/styles/components/backoffice/_stay-edit.scss
+++ b/src/assest/styles/components/backoffice/_stay-edit.scss
@@ -1,18 +1,37 @@
 .stay-edit {
-  .stay-edit-info-container {
+  .selection-container {
+    flex-direction: column;
+    gap: 20px;
+    margin-inline-end: 40px;
+    > * {
+      height: 40px;
+      padding: 10px;
+      width: 200px;
+    }
+  }
+
+  .info-container {
     display: flex;
-    //   flex-direction: column;
+
+    .summary-container{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+
     img {
       height: 24px;
       width: 24px;
     }
   }
+
   .stay-edit-location {
     margin-block-end: 25px;
-    span {
+   input {
       margin-inline-end: 25px;
     }
   }
+
   .img-upload-container {
     width: 100%;
     height: 500px;
@@ -31,24 +50,26 @@
 
     .upload-preview {
       height: 100%;
-      // background-size: 100% 100%;
-      // background-repeat: no-repeat;
-      // background-attachment: local;
-      // background-size: 100% 100%;
-      // background-repeat: no-repeat;
-      // background-position: center center;
+
+      &:not(:first-child) {
+        height: 246px;
+      }
+
       img {
-        aspect-ratio: 1;
         height: 100%;
         object-fit: cover;
         // &:not(:first-child) {
-        //   max-height: 250px;
+        //   height: 246px;
         // }
       }
 
       &:hover {
         cursor: pointer;
-        background-color: black;
+        background-color: rgba(0, 0, 0, 0.719);
+        // ::after{
+        //   position: absolute;
+        //   content: 'Upload image';
+        // }
         img {
           opacity: 0.8;
         }
