--- a/src/assest/styles/components/stay-app/_stay-preview.scss
+++ b/src/assest/styles/components/stay-app/_stay-preview.scss
@@ -1,13 +1,21 @@
 .stay-preview {
-    // @include aspect-ratio(1,1);
-
     aspect-ratio: 1;
     text-decoration: none;
     color: inherit;
     font-size: rem(18px);
-    
-    // max-width: 310px;
+    position: relative;
 
+    .like {
+        cursor: pointer;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        height: 24px;
+        width: 24px;
+        stroke: white;
+        stroke-width: 2px;
+        overflow: visible;
+    }
     .stay-card {
         display: flex;
         flex-direction: column;
@@ -21,27 +29,19 @@
         .slider {
             flex-grow: 1;
             height: 0;
-
             button {
                 &.slick-next {
                     opacity: 0;
                     right: 10px !important;
                 }
-
                 &.slick-prev {
                     opacity: 0;
                     left: 10px !important;
                 }
             }
-
             .slick-slider {
                 height: 100%;
                 position: relative;
-
-                // .slick-active button::before {
-                //     color: $clr5;
-                // }
-
                 .slick-dots li {
                     margin: 0;
                     width: 15px;
@@ -56,7 +56,6 @@
                     }
                     bottom: 30px;
                 }
-
                 .slick-list {
                     height: 100%;
 
@@ -85,21 +84,8 @@
                 &:hover {
                     opacity: 1;
                 }
-
-                // &.slick-next {
-
-                // }
-
                 &.slick-prev {
                     bottom: 10px;
-
-                    // &::before {
-                    //     opacity: 0.85;
-                    // }
-
-                    // &.slick-disabled:before {
-                    //     opacity: 0.85;
-                    // }
                 }
 
                 &.slick-next {
@@ -118,7 +104,6 @@
             padding-block-start: 7px;
             line-height: 1.31em;
 
-
             > div {
                 gap: 4px;
             }
@@ -130,7 +115,6 @@
                 border-radius: 0;
                 padding-block-end: 0.15em;
                 filter: invert(37%) sepia(56%) saturate(3663%) hue-rotate(327deg) brightness(101%) contrast(110%);
-                // filter: brightness(0) saturate(100%) invert(44%) sepia(52%) saturate(7135%) hue-rotate(330deg) brightness(104%) contrast(101%);
             }
             h3 {
                 font-size: rem(16px);
@@ -142,7 +126,6 @@
             }
 
             span {
-                // margin-inline-end: 5px;
                 font-size: rem(14px);
                 color: $clr2;
 
