--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -35,3 +35,4 @@
 @import "pages/app-login/app-login.scss";
 @import "pages/orders-page/orders-page.scss";
 @import "pages/host-page.scss";
+@import "pages/wishlist.scss";
