--- a/src/assest/styles/styles.scss
+++ b/src/assest/styles/styles.scss
@@ -26,6 +26,10 @@
 @import "components/backoffice/host-orders.scss";
 @import "components/backoffice/host-stays.scss";
 @import "components/loader/loader.scss";
+@import "components/add-review/add-review";
+@import "components/rate-star/rate-star";
+@import "components/review-preview/_review-preview.scss";
+@import "components/review-list/review-list.scss";
 
 // Pages
 
