fixing drop-down-menu,loader-css

--- a/src/assest/styles/pages/_wishlist.scss
+++ b/src/assest/styles/pages/_wishlist.scss
@@ -1,7 +1,10 @@
-.wishlist-container{
-    display: grid;
-    grid-auto-flow: dense;
-    grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
-    gap: 20px;
-    margin-block-start: 50px;
+.wishlist{
+padding-block-start: 40px;
+    .wishlist-container{
+        display: grid;
+        grid-auto-flow: dense;
+        grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
+        gap: 20px;
+        margin-block-start: 50px;
+    }
 }
